# reader_front_electron

./: .gitignore  .opencode.yaml  AGENTS.md  README.md  package-lock.json  package.json  proxyConfig.js  vite.config.js
scripts/: build-meta.js  build.js  dev-server.js  prepare.js
scripts/private/: tsc.js
src/cc/: CMakeLists.txt
src/cc/src/: addon.cpp
src/common/: ipcChannel.ts
src/main/: config.ts  main.ts  preload.ts  sql.js.d.ts  tsconfig.json
src/main/net/: listener.ts  netInit.ts
src/main/service/: bookDownloadService.ts  configService.ts  cppAddonService.ts  dbService.ts  fileService.ts  init.ts  request.ts  storeService.ts  windowService.ts
src/main/util/: env.ts  logUtil.ts  stroreUtil.ts
src/renderer/: App.vue  components.d.ts  hostConfig.ts
src/renderer/apis/: book.ts  bookDownload.ts  request.ts
src/renderer/components/window/: TitleBar.vue
src/renderer/service/: imagePreLoad.ts
src/renderer/store/: loading.ts
src/renderer/styles/: Element.less  Main.less
src/renderer/utils/: ipcUtil.ts
src/renderer/views/BookShelf/: BookShelf.vue
src/renderer/views/Config/: Config.less  Config.vue
src/renderer/views/DownloadBook/: DownloadBook.less  DownloadBook.vue
src/renderer/views/FavoriteBook/: FavoriteBook.less  FavoriteBook.vue
src/renderer/views/Home/: Home.less  Home.vue
src/renderer/views/PageView/: Contents.vue  PageView.vue  pageCache.ts  pageView.ts
